# autohooks-plugin-pytest

./: .gitignore  .travis.yml  CHANGELOG.md  MANIFEST.in  README.md  pyproject.toml  requirements.txt
autohooks/plugins/pytest/: __init__.py  pytest.py
tests/: test_config_custom.toml  test_config_default.toml  test_pytest.py
